// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttonのレンダリングテスト primaryのレンダリングテスト 1`] = `
<div>
  <a
    class="text-white block w-fit text-base md:text-2xl rounded-[2.8125rem] py-2 px-5 md:py-4 md:px-10
      font-normal hover:after:content-[""] hover:after:bg-white after:transition-all after:block
      after:h-[1px] after:w-full after:scale-0 hover:after:scale-100
      bg-primary false"
    href="/difficulty"
  >
    Let's Play!
  </a>
</div>
`;

exports[`Buttonのレンダリングテスト secondaryのレンダリングテスト 1`] = `
<div>
  <a
    class="text-white block w-fit text-base md:text-2xl rounded-[2.8125rem] py-2 px-5 md:py-4 md:px-10
      font-normal hover:after:content-[""] hover:after:bg-white after:transition-all after:block
      after:h-[1px] after:w-full after:scale-0 hover:after:scale-100
      false border-white border"
    href="/howto"
  >
    How to use
  </a>
</div>
`;
